--- a/checkout.html
+++ b/checkout.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Required meta tags -->
         <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
         <!-- Bootstrap CSS -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
@@ -12,32 +12,65 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400,700&display=swap" rel="stylesheet" />
         <link rel="stylesheet" href="./style.css" />
 
-        <title>Hello, world!</title>
+        <title>TOPUPPEDIA</title>
     </head>
     <body>
         <main>
-            <section class="container-mob bg-white" style="position: relative; height: 100vh;">
-                <div class="single-banner">
+            <section class="container-mob bg-white" style="position: relative; height: 100vh">
+                <div class="checkout-banner">
                     <img src="./img/MOBILE LEGEND BANNER-a2fb.png" loading="lazy" />
                 </div>
-                <div class="container-fluid mb-2 bg-white">
-                    <div class="row">
+                <div class="container-fluid mb-2 my-4">
+                    <div class="row px-3">
                         <div class="col">
-                            <div class="d-flex flex-column align-items-center" style="position: relative">
-                                <div class="single-profile">
-                                    <img src="./img/ML-faa3.png" loading="lazy" />
-                                </div>
-                                <h1 class="mb-1" style="font-size: 18px; margin-top: 50px">Mobile Legends</h1>
-                                <p class="mb-3" style="font-size: xx-small; letter-spacing: 0.1em">Moonton</p>
-                                <div class="col" style="text-align: center;">
-                                    <h2 style="font-size: 14px"><strong>Tentang Mobile Legends: Bang Bang</strong></h2>
-                                    <span><p style="font-size: 12px; line-height: 1.5rem">Segera lakukan pembayaran paling lambat 1x12 jam.</p></span>
-                                    <span><p style="font-size: 12px; line-height: 1.5rem">Kirim Bukti pembayaran Ke WA +62: </p></span>
-                                    <div class="just-pay-1fbseht"><button disabled="" type="submit" class="just-pay-1hy3qdb">Bukti Pembayaran</button></div>
-                                </div>
-                            </div>
+                            <h2 style="font-size: 18px"><strong>Transaksi</strong></h2>
                         </div>
                     </div>
+                    <div class="mx-3" style="border-top: solid 1px; border-color: #e2e8f0"></div>
+                    <div class="w-100 my-4 px-3 d-flex justify-content-between">
+                        <div class="col-3">
+                            <div class="checkout-profile">
+                                <img src="./img/ML-faa3.png" loading="lazy" />
+                            </div>
+                        </div>
+                        <div class="col-5">
+                            <h1 class="mt-2" style="font-size: 1.2rem">Mobile Legends</h1>
+                            <p class="mt-2" style="font-size: 1em">Moonton</p>
+                        </div>
+                        <div class="col-3"></div>
+                    </div>
+                    <div class="row px-3">
+                        <div class="col-8">
+                            <h2 style="font-size: 14px"><strong>Denom</strong></h2>
+                            <span><p style="font-size: 14px; line-height: 1.5rem">(total diamon)</p></span>
+                        </div>
+                        <div class="col-4">
+                            <h2 style="font-size: 14px"><strong>Harga</strong></h2>
+                            <span><p style="font-size: 14px; line-height: 1.5rem">Rp 10.000.000,-</p></span>
+                        </div>
+                    </div>
+                    <div class="mx-3" style="border-top: solid 1px; border-color: #e2e8f0"></div>
+                    <div class="row px-3">
+                        <div class="col-6 pt-2">
+                            <p class="mb-1" style="font-size: 14px">USER ID</p>
+                            <p class="py-1 ps-2" style="font-size: 12px; border: solid 1px #ccc; border-radius: 5px; line-height: 1.5rem">(USER ID)</p>
+                        </div>
+                        <div class="col-6 pt-2">
+                            <p class="mb-1" style="font-size: 14px">ZONE ID</p>
+                            <p class="py-1 ps-2" style="font-size: 12px; border: solid 1px #ccc; border-radius: 5px; line-height: 1.5rem">(ZONE ID)</p>
+                        </div>
+                    </div>
+                    <div class="mx-3" style="border-top: solid 1px; border-color: #e2e8f0"></div>
+                    <div class="d-flex pt-3 flex-column align-items-center justify-content-center">
+                        <h2 style="color:#108ee9;">DANA:</h2>
+                        <div class="col-11 py-2 mb-3 text-center" style="font-size: 25px; line-height: 1.5rem;border: solid 1px #ccc; border-radius: 5px; line-height: 1.5rem"><p class="m-0" style="color:#108ee9;">08112312311</p></div>
+                        <span><p class="mb-1" style="font-size: 14px; line-height: 1.5reml">Pastikan data yang kamu kirim kan <strong>sudah benar</strong>!</p></span>
+                        <span><p class="mb-1" style="font-size: 14px; line-height: 1.5rem">Segera lakukan pembayaran paling lambat <strong>1x12 jam</strong>.</p></span>
+                        <span><p class="mb-1" style="font-size: 14px; line-height: 1.5rem">Kirim Bukti pembayaran Ke WA <strong>+62</strong>:</p></span>
+                    </div>
+                    <div class="just-pay-1fbsenh">
+                        <button disabled="" class="just-pay-1hy3qdb">Ubah Data</button>
+                        <button disabled="" type="submit" class="just-pay-1hy3qdb">Konfirmasi</button></div>
                 </div>
             </section>
         </main>
