--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                                     <div class="row my-2 w-100">
                                         <div class="col-12 p-0">
                                             <label for="inputNoWA" class="visually-hidden">Normor Whatsapp</label>
-                                            <input name="nomorwa" type="number" class="form-control" id="inputNoWA" placeholder="Normor Whatsapp" autocomplete="off" required />
+                                            <input name="nomorwa" type="text" class="form-control" id="inputNoWA" placeholder="Normor Whatsapp" autocomplete="off" required />
                                         </div>
                                     </div>
                                     <p style="color: #718096; font-size: 14px">Bukti pembayaran atas pembelian anda akan kami kirimkan ke WhatsApp anda.</p>
