--- a/checkout.html
+++ b/checkout.html
@@ -9,12 +9,12 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400,700&display=swap" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet" />
         <link rel="stylesheet" href="./style.css" />
 
         <title>TOPUPPEDIA</title>
     </head>
-    <body>
+    <body id="cheo">
         <main>
             <section class="container-mob bg-white" style="position: relative; height: 100vh">
                 <div class="checkout-banner">
@@ -23,7 +23,9 @@
                 <div class="container-fluid mb-2 my-4">
                     <div class="row px-3">
                         <div class="col">
-                            <h2 style="font-size: 18px"><strong>Transaksi</strong></h2>
+                            <h2 style="font-size: 18px">
+                                <strong>Transaksi (<span id="nowaco"></span></strong>)
+                            </h2>
                         </div>
                     </div>
                     <div class="mx-3" style="border-top: solid 1px; border-color: #e2e8f0"></div>
@@ -42,38 +44,55 @@
                     <div class="row px-3">
                         <div class="col-8">
                             <h2 style="font-size: 14px"><strong>Denom</strong></h2>
-                            <span><p style="font-size: 14px; line-height: 1.5rem">(total diamon)</p></span>
+                            <span><p id="denomco" style="font-size: 14px; line-height: 1.5rem"></p></span>
                         </div>
                         <div class="col-4">
                             <h2 style="font-size: 14px"><strong>Harga</strong></h2>
-                            <span><p style="font-size: 14px; line-height: 1.5rem">Rp 10.000.000,-</p></span>
+                            <span><p id="hargasss" style="font-size: 14px; line-height: 1.5rem"></p></span>
                         </div>
                     </div>
                     <div class="mx-3" style="border-top: solid 1px; border-color: #e2e8f0"></div>
                     <div class="row px-3">
                         <div class="col-6 pt-2">
                             <p class="mb-1" style="font-size: 14px">USER ID</p>
-                            <p class="py-1 ps-2" style="font-size: 12px; border: solid 1px #ccc; border-radius: 5px; line-height: 1.5rem">(USER ID)</p>
+                            <p id="usrco" class="py-1 ps-2" style="font-size: 12px; border: solid 1px #ccc; border-radius: 5px; line-height: 1.5rem"></p>
                         </div>
                         <div class="col-6 pt-2">
                             <p class="mb-1" style="font-size: 14px">ZONE ID</p>
-                            <p class="py-1 ps-2" style="font-size: 12px; border: solid 1px #ccc; border-radius: 5px; line-height: 1.5rem">(ZONE ID)</p>
+                            <p id="zoneco" class="py-1 ps-2" style="font-size: 12px; border: solid 1px #ccc; border-radius: 5px; line-height: 1.5rem"></p>
                         </div>
                     </div>
                     <div class="mx-3" style="border-top: solid 1px; border-color: #e2e8f0"></div>
                     <div class="d-flex pt-3 flex-column align-items-center justify-content-center">
-                        <h2 style="color:#108ee9;">DANA:</h2>
-                        <div class="col-11 py-2 mb-3 text-center" style="font-size: 25px; line-height: 1.5rem;border: solid 1px #ccc; border-radius: 5px; line-height: 1.5rem"><p class="m-0" style="color:#108ee9;">08112312311</p></div>
-                        <span><p class="mb-1" style="font-size: 14px; line-height: 1.5reml">Pastikan data yang kamu kirim kan <strong>sudah benar</strong>!</p></span>
-                        <span><p class="mb-1" style="font-size: 14px; line-height: 1.5rem">Segera lakukan pembayaran paling lambat <strong>1x12 jam</strong>.</p></span>
-                        <span><p class="mb-1" style="font-size: 14px; line-height: 1.5rem">Kirim Bukti pembayaran Ke WA <strong>+62</strong>:</p></span>
+                        <span
+                            ><p class="mb-1" style="font-size: 14px; line-height: 1.5reml">Pastikan data yang kamu kirim kan <strong>sudah benar</strong>!</p></span
+                        >
+
+                        <h2 style="color: #108ee9">DANA:</h2>
+                        <div class="col-11 py-2 mb-3 text-center" style="font-size: 25px; line-height: 1.5rem; border: solid 1px #ccc; border-radius: 5px; line-height: 1.5rem"><p class="m-0" style="color: #108ee9">08112312311</p></div>
+                        <span
+                            ><p class="mb-1" style="font-size: 14px; line-height: 1.5rem">Segera lakukan pembayaran paling lambat <strong>1x12 jam</strong>.</p></span
+                        >
+                        <span
+                            ><p class="mb-1" style="font-size: 14px; line-height: 1.5rem">Kirim Bukti pembayaran Ke WA <strong>+62 822-1700-7025</strong>:</p></span
+                        >
                     </div>
-                    <div class="just-pay-1fbsenh">
-                        <button disabled="" class="just-pay-1hy3qdb">Ubah Data</button>
-                        <button disabled="" type="submit" class="just-pay-1hy3qdb">Konfirmasi</button></div>
+                    <div class="just-pay-1fbsenh" id="chag2">
+                        <button class="just-pay-1hy3qdb  datdel">Selesai</button>
+                        <a href="https://wa.me/+6282217007025/?text=Halo%20gan%2C%20saya%20mau%20kirim%20bukti%20pembayaran%20diamon%21" target="_blank" class="just-pay-1hy3qdb" id="pesan">Kirim Pesan</a>
+                    </div>
+                    <div class="just-pay-1fbsenh" id="chag">
+                        <button class="just-pay-1hy3qdb datdel">Ubah Data</button>
+                        <form name="cotop" class="just-pay-1hy3qdb">
+                            <div class="conovis"></div>
+                            <button type="submit" class="just-pay-1hy3qdb">Konfirmasi</button>
+                        </form>
+                    </div>
                 </div>
             </section>
         </main>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+        <script src="./loader.js"></script>
+        <script type="module" src="./main.js"></script>
     </body>
 </html>
