--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         </div>
                     </div>
                 </div>
-                <form name="cotop">
+                <form name="fotop">
                     <div class="container-fluid mb-2 bg-white">
                         <div class="row">
                             <div class="col">
@@ -46,11 +46,11 @@
                                     <div class="my-2 w-100 d-flex justify-content-between align-items-center">
                                         <div class="col-5 p-0">
                                             <label for="inputUserId" class="visually-hidden">User ID</label>
-                                            <input name="userid" type="text" class="form-control" id="inputUserId" placeholder="Masukan User ID" autocomplete="off" required />
+                                            <input name="userid" type="text" class="form-control fo-val" id="inputUserId" placeholder="Masukan User ID" autocomplete="off" required />
                                         </div>
                                         <div class="col-5 p-0">
                                             <label for="inputZoneId" class="visually-hidden">Zone ID</label>
-                                            <input name="zoneid" type="text" class="form-control" id="inputZoneId" placeholder="Masukan Zone ID" autocomplete="off" required />
+                                            <input name="zoneid" type="text" class="form-control fo-val" id="inputZoneId" placeholder="Masukan Zone ID" autocomplete="off" required />
                                         </div>
                                         <div class="col-auto p-0" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
                                             <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 24 24" focusable="false" class="chakra-icon just-pay-14yg3v1" height="1.75em" width="1.75em" xmlns="http://www.w3.org/2000/svg">
@@ -86,7 +86,7 @@
                                             <p class="chakra-text just-pay-wwm21b">E - Wallet</p>
                                         </div>
                                         <div class="col bg-milk border-bot">
-                                            <input type="radio" class="btn-check" name="pembayaran" id="dana" autocomplete="off" value="dana" required />
+                                            <input type="radio" class="btn-check fo-val" name="pembayaran" id="dana" autocomplete="off" value="dana" required />
                                             <label class="btn btn-outline-primary w-100" for="dana" style="overflow: hidden">
                                                 <div class="position-relative"><span line-height="52px" class="just-pay-13e7uab"></span></div>
                                                 <div class="d-flex flex-row justify-content-between align-items-center">
@@ -108,7 +108,7 @@
                                     <div class="row my-2 w-100">
                                         <div class="col-12 p-0">
                                             <label for="inputNoWA" class="visually-hidden">Normor Whatsapp</label>
-                                            <input name="nomorwa" type="text" class="form-control" id="inputNoWA" placeholder="Normor Whatsapp" autocomplete="off" required />
+                                            <input name="nomorwa" type="number" class="form-control fo-val" id="inputNoWA" placeholder="Normor Whatsapp" autocomplete="off" required />
                                         </div>
                                     </div>
                                     <p style="color: #718096; font-size: 14px">Bukti pembayaran atas pembelian anda akan kami kirimkan ke WhatsApp anda.</p>
@@ -121,7 +121,7 @@
                         <div class="just-pay-1fbseht"><button type="submit" class="just-pay-1hy3qdb">Beli Sekarang</button></div>
                     </div>
                 </form>
-            </section>
+            </section> 
         </main>
 
         <!-- Modal -->
@@ -139,6 +139,7 @@
         </div>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+        <script src="./loader.js"></script>
         <script type="module" src="./main.js"></script>
     </body>
 </html>
