--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet" />
         <link rel="stylesheet" href="./style.css" />
 
-        <title>TOPUPPEDIA</title>
+        <title>TOPUPGAMEPEDIA</title>
     </head>
     <body>
         <main>
@@ -76,7 +76,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="container-fluid mb-2 bg-white">
+                    <div class="container-fluid mb-2 bg-white" id="dana1">
                         <div class="row">
                             <div class="col">
                                 <div class="d-flex flex-column align-items-center py-5">
