--- a/checkout.html
+++ b/checkout.html
@@ -12,7 +12,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet" />
         <link rel="stylesheet" href="./style.css" />
 
-        <title>TOPUPGAMEPEDIA</title>
+        <title>NVD STORE</title>
     </head>
     <body id="cheo">
         <main>
@@ -43,7 +43,7 @@
                     </div>
                     <div class="row px-3">
                         <div class="col-8">
-                            <h2 style="font-size: 14px"><strong>Denom</strong></h2>
+                            <h2 style="font-size: 14px"><strong>Diamond</strong></h2>
                             <span><p id="denomco" style="font-size: 14px; line-height: 1.5rem;color: #108ee9"></p></span>
                         </div>
                         <div class="col-4">
@@ -78,15 +78,15 @@
                         <h2 style="color: #108ee9">DANA:</h2>
                         
                         <div class="col-11 py-2 mb-3 text-center" style="font-size: 25px; line-height: 1.5rem; border: solid 1px #ccc; border-radius: 5px; line-height: 1.5rem"><p class="m-0" style="color: #108ee9">0852 7606 8005</p>
-                        <p class="m-0" style="font-size: 14px;">a/n. AHMAD RYDO SIAHAAN</p></div>
+                        <p class="m-0" style="font-size: 14px;">a/n. Ridho Dian Lesmana</p></div>
                         <span>
-                            <p class="mb-1" style="font-size: 14px; line-height: 1.5rem">Kirim Bukti pembayaran Ke WA <strong>+62 822-1700-7025</strong>:</p>
+                            <p class="mb-1" style="font-size: 14px; line-height: 1.5rem">Kirim Bukti pembayaran Ke WA <strong>+62 822-7711-3307</strong>:</p>
                         </span>
              
                     </div>
                     <div class="just-pay-1fbsenh" id="chag2">
                         <button class="just-pay-1hy3qdb  datdel">Selesai</button>
-                        <a href="https://wa.me/+6282217007025/?text=Halo%20gan%2C%20saya%20mau%20kirim%20bukti%20pembayaran%20diamon%21" target="_blank" class="just-pay-1hy3qdb" id="pesan">Kirim Pesan</a>
+                        <a href="https://wa.me/+6282277113307/?text=Halo%20bang%2C%20saya%20mau%20kirim%20bukti%20pembayaran%20diamon%d21" target="_blank" class="just-pay-1hy3qdb" id="pesan">Kirim Pesan</a>
                     </div>
                     <div class="just-pay-1fbsenh" id="chag">
                         <button class="just-pay-1hy3qdb datdel">Ubah Data</button>
