--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <main>
             <section class="container-mob" style="position: relative">
                 <div class="single-banner">
-                    <img src="./img/MOBILE LEGEND BANNER-a2fb.png" loading="lazy" />
+                    <img src="https://i.ibb.co/xmf9S8x/rickthor7.png" loading="lazy" />
                 </div>
                 <div class="container-fluid mb-2 bg-white">
                     <div class="row">
