--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                                 <h1 class="mb-1" style="font-size: 18px; margin-top: 50px">Mobile Legends</h1>
                                 <p class="mb-3" style="font-size: xx-small; letter-spacing: 0.1em">Moonton</p>
                                 <div class="col">
-                                    <h2 style="font-size: 14px"><strong>Tentang Mobile Legends: Bang Bang</strong></h2>
-                                    <span><p style="font-size: 12px; line-height: 1.5rem">Dirilis pada tahun 2016, Mobile Legends: Bang Bang merupakan Mobile Multiplayer Online Battle Arena yang dikembangkan oleh Moonton. Game ini sangat populer terutama di Asia Tenggara dan menjadi salah satu game terpilih untuk kompetisi e-sport pertama di ASEAN Games Filipina, 2019 lalu.</p></span>
+                                    <h2 style="font-size: 14px"><strong>Prosedur Top Up </strong></h2>
+                                    <span><p style="font-size: 12px; line-height: 1.5rem">Isi data id dan jumlah pesanan juga nomor whatsapp. Jika sudah mengisi data klik tombol "beli sekarang" dan anda akan diarahkan menuju whatsapp admin untuk melanjutkan order pesanan.</p></span>
                                 </div>
                             </div>
                         </div>
