--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet" />
         <link rel="stylesheet" href="./style.css" />
 
-        <title>TOPUPGAMEPEDIA</title>
+        <title>NVD STORE</title>
     </head>
     <body>
         <main>
