--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         <div class="row">
                             <div class="col">
                                 <div class="d-flex flex-column align-items-center py-5">
-                                    <h2 class="chakra-heading just-pay-11iu74w w-100 d-flex align-items-center"><span class="step-numb">3</span><span class="just-pay-p3vkp9">Pilih Pembayarn</span></h2>
+                                    <h2 class="chakra-heading just-pay-11iu74w w-100 d-flex align-items-center"><span class="step-numb">3</span><span class="just-pay-p3vkp9">Pilih Pembayaran</span></h2>
                                     <div class="w-100 border-bot mt-2">
                                         <div class="just-pay-n5qlg6">
                                             <p class="chakra-text just-pay-wwm21b">E - Wallet</p>
@@ -107,7 +107,7 @@
                                     <h2 class="chakra-heading just-pay-11iu74w w-100 d-flex align-items-center d-flex align-items-center"><span class="step-numb">4</span><span class="just-pay-p3vkp9">Beli!</span></h2>
                                     <div class="row my-2 w-100">
                                         <div class="col-12 p-0">
-                                            <label for="inputNoWA" class="visually-hidden">Normor Whatsapp</label>
+                                            <label for="inputNoWA" class="visually-hidden">Nomor Whatsapp</label>
                                             <input name="nomorwa" type="number" class="form-control fo-val" id="inputNoWA" placeholder="Normor Whatsapp" autocomplete="off" required />
                                         </div>
                                     </div>
